Modernize the classloaderhandler package for Java 17
Build the Quarkus pre-3.11 element map with Map.of, replace
Collections.emptyList/emptySet/singletonList with List.of and Set.of, use
pattern matching for instanceof when flattening the WebSphere Liberty
collection of collections, and use String.isEmpty().